<resources>
    <string name="app_name">Rentit</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_user_profile">User Profile</string>
    <string name="action_login">Login</string>
    <string name="action_logout">Logout</string>

    <string name="menu_home">Home</string>
    <string name="menu_rentals">Rentals</string>
    <string name="menu_your_listings">Your Listings</string>
    <string name="menu_your_bookings">Your Bookings</string>
    <string name="menu_create_listing">Create New Listing</string>
    <string name="item_image">Item Image</string>
    <string name="title_activity_login">Login</string>

    <!-- Strings used for login activity -->
    <string name="text_login">Login</string>
    <string name="text_password">Password</string>
    <string name="loginActivity_text_dont_have_account">Don\'t have account? Sign Up</string>

    <!-- Strings used for sign up activity -->
    <string name="text_sign_up">Sign Up</string>
    <string name="text_email">Email</string>
    <string name="text_username">Username</string>
    <string name="text_phone">Phone</string>
    <string name="text_address">Address</string>
    <string name="text_postal_code">Postal Code</string>
    <string name="signUpActivity_text_already_have_account">Already have an account? Login</string>
    <string name="instructions">Check out the rentals around your area!</string>

    <!-- Strings used for user profile activity -->
    <string name="sample_username">Steven Smith</string>
    <string name="sample_email">stevensmith@gmail.com</string>
    <string name="sample_phone">604-603-6021</string>
    <string name="sample_postal_code">K8R K5D</string>
    <string name="sample_password">******</string>
    <string name="text_save">save</string>
    <string name="text_cancel">Cancel</string>

    <!-- Strings used for user listings activity -->
    <string name="text_create_new_listing">Create New Listing</string>
    <string name="sample_listing_title">Ford Mustang GT</string>
    <string name="sample_listing_price">$20</string>
    <string name="sample_listing_distance">100</string>
    <string name="text_per_day">per day</string>
    <string name="text_km_away">km away</string>
    <string name="text_away">away</string>
    <string name="text_dot">•</string>
    <string name="sample_listing_availability">Available</string>
    <string name="text_edit_listing">Edit Listing</string>
    <string name="text_editing_your_list">Editing your listing</string>
    <string name="text_relist_item">Relist item</string>
    <string name="text_mark_unavailable">Mark Unavailable</string>
    <string name="text_delete">Delete</string>
    <string name="more_actions">...</string>
    <string-array name="profile_photo_options">
        <item>Open Camera</item>
        <item>Select from Gallery</item>
    </string-array>

    <!-- strings for maps   -->
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyAPy0T4TBs7Z9WTn2xJBD_AEcJi_G3CP4E</string>
    <string name="cancel_button">CANCEL</string>
    <string name="go_back">BACK</string>
    <string name="view_more">VIEW</string>

    <!-- Activity and Fragment Titles -->

    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_user_listings">Your listings</string>
    <string name="title_activity_user_profile">Your profile</string>
    <string name="title_activity_booking">Book listing</string>
    <string name="title_activity_create_listing">Create new listing</string>
    <string name="title_activity_update_email">Update Email</string>
    <string name="title_activity_change_password">Change Password</string>
    <string name="title_activity_edit_listing">Edit your listing</string>
    <string name="title_fragment_your_bookings">Your bookings</string>

    <!-- Strings used for PreferenceScreen -->
    <string name="settingsActivity_preferenceCategory_title_account_preference">Account Preferences</string>
    <string name="settingsActivity_preferenceScreen_title_user_profile">Username, Phone, Postal Code, etc</string>
    <string name="settingsActivity_preferenceScreen_summary_user_profile">User Profile</string>
    <string name="settingsActivity_preferenceScreen_key_user_profile">user_profile</string>

    <string name="settingsActivity_preferenceScreen_title_email">Email</string>
    <string name="settingsActivity_preferenceScreen_summary_email">Update Email</string>
    <string name="settingsActivity_preferenceScreen_key_email">update_email</string>
    <string name="settingsActivity_preferenceScreen_title_password">Password</string>
    <string name="settingsActivity_preferenceScreen_summary_password">Change Password</string>
    <string name="settingsActivity_preferenceScreen_key_password">change_password</string>

    <!-- Strings used for update email activity -->
    <string name="updateEmailActivity_text_please_authenticate">Please enter your password and verify before continuing</string>
    <string name="updateEmailActivity_text_current_email">Current Email</string>
    <string name="text_enter_your_password">Enter your password</string>
    <string name="text_password_with_asterisk">Password*</string>
    <string name="text_authenticate">Authenticate</string>
    <string name="text_account_not_authenticate">Your account is not authenticated yet.</string>
    <string name="text_new_email_with_asterisk">New Email*</string>
    <string name="text_enter_your_new_email">Enter your new email</string>
    <string name="text_update_email">Update Email</string>

    <!-- Strings used for change password activity -->
    <string name="changePasswordActivity_text_please_authenticate">Please enter your password and verify before continuing</string>
    <string name="text_current_password_with_asterisk">Current Password*</string>
    <string name="text_new_password_with_asterisk">New Password*</string>
    <string name="text_confirm_password_with_asterisk">Confirm Password*</string>
    <string name="text_change_password">Change Password</string>
    <string name="text_enter_your_new_password">Enter your new password</string>
    <string name="text_re_enter_your_new_password">Re-enter your new password</string>

    <!-- Strings used for create listing activity -->
    <string name="text_listing_on_rentit">Listing on Rentit</string>
    <string name="text_add_photos">Add Photos</string>
    <string name="text_choose_your_photos">Choose your listing\'s main photo first.</string>
    <string name="text_title">Title</string>
    <string name="text_price">Price</string>
    <string name="text_price_per_day">Price - Per day</string>
    <string name="text_type">Type</string>
    <string name="text_description">Description</string>
    <string-array name="array_listing_types">
        <item>Rental</item>
        <item>Gigs</item>
    </string-array>

    <string-array name="array_listing_rental_categories">
        <item>Car Rental</item>
        <item>Tool Rental</item>
        <item>Item Rental</item>
    </string-array>

    <string-array name="array_listing_gigs_categories">
        <item>Photograph</item>
        <item>Haircut</item>
        <item>Repair</item>
    </string-array>
    <string name="text_publish">Publish</string>
    <string name="text_required_with_asterisk">Required*</string>
    <string name="dollar_sign">$</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum fermentum libero enim, eget viverra turpis fermentum ac. Phasellus faucibus scelerisque enim id sollicitudin. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Proin et posuere sapien. Sed efficitur justo eget est pretium, sed laoreet sapien sodales. Maecenas convallis elit non aliquam consectetur. Vivamus suscipit commodo interdum. Mauris ac elit ut enim fringilla consectetur.</string>


    <!-- Strings used for edit listing activity -->
    <string-array name="array_listing_availabilities">
        <item>Available</item>
        <item>Unavailable</item>
    </string-array>

    <!-- Strings used for user booking list fragment -->
    <string name="text_from">From:</string>
    <string name="text_to">To:</string>
    <string name="text_booking_status">Booking Status:</string>
    <string name="text_booking_for">Booking for:</string>
    <string name="text_pick_booking_start_date">Pick booking start date</string>
    <string name="text_pick_booking_start_time">Pick booking start time</string>
    <string name="text_pick_booking_end_date">Pick booking end date</string>
    <string name="text_pick_booking_end_time">Pick booking end time</string>
    <string name="text_pick_start_date">Pick start date</string>
    <string name="text_pick_start_time">Pick start time</string>
    <string name="text_pick_end_date">Pick end date</string>
    <string name="text_pick_end_time">Pick end time</string>
    <string name="text_booking_time">Booking Time:</string>
    <string name="sample_booking_start_date_time">15:30 August 10 2022</string>
    <string name="sample_booking_start_date">August 10 2022</string>
    <string name="sample_booking_start_time">15:30</string>
    <string name="sample_booking_end_date">August 20 2022</string>
    <string name="sample_booking_end_time">10:30</string>
    <string name="sample_booking_end_date_time">10:30 August 20 2022</string>
    <string name="text_book_now">Book now</string>


    <!-- Strings used for details activity -->
    <string name="text_no_description">No description available...</string>


</resources>