<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/customDark"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_booking_for"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/booking_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sample_listing_title"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            android:textColor="@color/white"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/bookingActivity_textView_listingPrice"
                android:textColor="@color/light_grey"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:text="@string/sample_listing_price"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_per_day"
                android:textSize="15sp"
                android:textColor="@color/light_grey"
                android:layout_marginHorizontal="5dp"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_marginVertical="20dp"
            android:background="@color/dark_grey"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/booking_date_time_picking_background"
            android:padding="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_pick_booking_start_date"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <Button
                android:id="@+id/bookingActivity_button_pick_booking_startDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_pick_start_date"
                android:layout_marginHorizontal="20dp"
                android:textAllCaps="false"
                android:backgroundTint="@color/customAccent"
                android:textColor="@color/white"
                android:onClick="setDate"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_pick_booking_start_time"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:layout_marginTop="10dp"/>

            <Button
                android:id="@+id/bookingActivity_button_pick_booking_startTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_pick_start_time"
                android:layout_marginHorizontal="20dp"
                android:textAllCaps="false"
                android:backgroundTint="@color/customAccent"
                android:textColor="@color/white"
                android:onClick="setTime"/>


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/booking_date_time_picking_background"
            android:padding="15dp"
            android:layout_marginTop="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_pick_booking_end_date"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <Button
                android:id="@+id/bookingActivity_button_pick_booking_endDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_pick_end_date"
                android:layout_marginHorizontal="20dp"
                android:textAllCaps="false"
                android:backgroundTint="@color/customAccent"
                android:textColor="@color/white"
                android:onClick="setDate"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_pick_booking_end_time"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:layout_marginTop="10dp"/>

            <Button
                android:id="@+id/bookingActivity_button_pick_booking_endTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_pick_end_time"
                android:layout_marginHorizontal="20dp"
                android:textAllCaps="false"
                android:backgroundTint="@color/customAccent"
                android:textColor="@color/white"
                android:onClick="setTime"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginVertical="20dp"
            android:background="@color/dark_grey"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_booking_time"
            android:textColor="@color/white"
            android:textSize="16sp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_from"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:layout_marginRight="10dp"/>

            <TextView
                android:id="@+id/bookingActivity_textView_booking_start_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sample_booking_start_time"
                android:textColor="@color/light_grey"
                android:textSize="15sp"
                android:layout_marginRight="5dp"/>

            <TextView
                android:id="@+id/bookingActivity_textView_booking_start_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sample_booking_start_date"
                android:textColor="@color/light_grey"
                android:textSize="15sp" />



        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_to"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:layout_marginRight="10dp"/>

            <TextView
                android:id="@+id/bookingActivity_textView_booking_end_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sample_booking_end_time"
                android:textColor="@color/light_grey"
                android:textSize="15sp"
                android:layout_marginRight="5dp"/>

            <TextView
                android:id="@+id/bookingActivity_textView_booking_end_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sample_booking_end_date"
                android:textColor="@color/light_grey"
                android:textSize="15sp" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="0.3"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/bookingActivity_button_cancel"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_weight="1"
                android:backgroundTint="@color/customAccent"
                android:text="@string/text_cancel"
                android:onClick="cancel"
                android:textColor="@color/white"/>

            <Button
                android:id="@+id/bookingActivity_button_bookNow"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_weight="1"
                android:backgroundTint="@color/customAccent"
                android:text="@string/text_book_now"
                android:onClick="confirm"
                android:textColor="@color/white"/>

        </LinearLayout>

    </LinearLayout>

</ScrollView>