<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_rentals"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_rentals" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_booking_list"
            android:icon="@drawable/ic_menu_gallery"
            android:title="Your Bookings" />
        <item
            android:id="@+id/nav_create_listing"
            android:icon="@drawable/ic_baseline_add_24"
            android:title="@string/menu_create_listing" />

        <item
            android:id="@+id/nav_your_listings"
            android:icon="@drawable/ic_baseline_sell_24"
            android:title="@string/menu_your_listings" />

    </group>

</menu>