<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".users.ChangePasswordActivity"
    android:fillViewport="true"
    android:background="@color/customDark">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp"
            android:layout_margin="15dp"
            android:background="@color/customPrimary">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/changePasswordActivity_text_please_authenticate"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                android:textColor="@color/light_grey"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:padding="6dp"
                android:text="@string/text_current_password_with_asterisk"
                android:textColor="@color/light_grey"
                android:textSize="16sp"/>

            <EditText
                android:id="@+id/changePasswordActivity_editText_current_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_enter_your_password"
                android:textColor="@color/white"
                android:background="@drawable/light_grey_border"
                android:textColorHint="@color/light_grey"
                android:padding="6dp"
                android:inputType="textPassword"/>

            <Button
                android:id="@+id/changePasswordActivity_button_authenticate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/text_authenticate"
                android:layout_marginHorizontal="50dp"
                android:backgroundTint="@color/customAccent"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp"
            android:layout_margin="15dp"
            android:background="@color/customPrimary">

            <TextView
                android:id="@+id/changePasswordActivity_textView_isAuthenticated"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:padding="6dp"
                android:text="@string/text_account_not_authenticate"
                android:textColor="@color/light_grey"
                android:textSize="16sp"
                android:textAlignment="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:padding="6dp"
                android:text="@string/text_new_password_with_asterisk"
                android:textColor="@color/light_grey"
                android:textSize="16sp"/>


            <EditText
                android:id="@+id/changePasswordActivity_editText_new_password_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_enter_your_new_password"
                android:textColor="@color/white"
                android:background="@drawable/light_grey_border"
                android:textColorHint="@color/light_grey"
                android:padding="6dp"
                android:inputType="textPassword"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:padding="6dp"
                android:text="@string/text_new_password_with_asterisk"
                android:textColor="@color/light_grey"
                android:textSize="16sp"/>

            <EditText
                android:id="@+id/changePasswordActivity_editText_new_password_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_enter_your_new_password"
                android:textColor="@color/white"
                android:background="@drawable/light_grey_border"
                android:textColorHint="@color/light_grey"
                android:padding="6dp"
                android:inputType="textPassword"/>

            <Button
                android:id="@+id/changePasswordActivity_button_change_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/text_change_password"
                android:layout_marginHorizontal="50dp"
                android:backgroundTint="@color/customAccent"
                android:onClick="changePassword"/>

        </LinearLayout>



    </LinearLayout>

</ScrollView>